syntax = "proto3";

package tree_rpc;
option go_package="./types";

// RDS实例基础信息
message RdsInstance {
  string instance_id = 1;           // RDS实例ID
  string instance_name = 2;         // 实例名称
  string instance_type = 3;         // 实例规格
  string status = 4;               // 实例状态
  string private_ip = 5;           // 私网IP
  string public_ip = 6;            // 公网IP
  string region_id = 7;            // 地域ID
  string zone_id = 8;              // 可用区ID
  string vpc_id = 9;               // VPC ID
  string db_type = 10;             // 数据库类型
  string db_version = 11;          // 数据库版本
  int64 create_time = 12;          // 创建时间
  int64 expired_time = 13;         // 过期时间
  map<string, string> tags = 14;    // 标签
}

// 获取未绑定的RDS列表请求
message GetRdsUnbindListRequest {
  int32 page_size = 1;             // 每页数量
  int32 page_num = 2;              // 页码
  string region_id = 3;            // 按地域筛选
  string instance_type = 4;        // 按实例规格筛选
  string keyword = 5;              // 搜索关键字(实例ID/名称/IP)
}

message GetRdsUnbindListResponse {
  repeated RdsInstance instances = 1; // RDS实例列表
  int32 total = 2;                  // 总数量
}

// 获取已绑定的RDS列表请求
message GetRdsListRequest {
  int32 page_size = 1;             // 每页数量
  int32 page_num = 2;              // 页码
  int64 node_id = 3;               // 资源树节点ID
  string region_id = 4;            // 按地域筛选
  string status = 5;               // 按状态筛选
  string keyword = 6;              // 搜索关键字
}

message GetRdsListResponse {
  repeated RdsInstance instances = 1; // RDS实例列表
  int32 total = 2;                  // 总数量
}

// 绑定RDS请求
message BindRdsRequest {
  int64 node_id = 1;               // 资源树节点ID
  repeated string instance_ids = 2; // RDS实例ID列表
  string operator = 3;             // 操作人
  map<string, string> bind_attrs = 4; // 绑定时附加的属性
}

message BindRdsResponse {
  bool success = 1;                // 是否绑定成功
  string message = 2;              // 绑定结果信息
  repeated string failed_ids = 3;   // 绑定失败的实例ID列表
}

// 解绑RDS请求
message UnBindRdsRequest {
  int64 node_id = 1;               // 资源树节点ID
  repeated string instance_ids = 2; // RDS实例ID列表
  string operator = 3;             // 操作人
  string reason = 4;               // 解绑原因
}

message UnBindRdsResponse {
  bool success = 1;                // 是否解绑成功
  string message = 2;              // 解绑结果信息
  repeated string failed_ids = 3;   // 解绑失败的实例ID列表
}

// 批量操作RDS请求
message BatchOperateRdsRequest {
  repeated string instance_ids = 1; // RDS实例ID列表
  string operation = 2;            // 操作类型(start/stop/restart)
  string operator = 3;             // 操作人
  bool force = 4;                  // 是否强制操作
  map<string, string> options = 5;  // 操作选项
}

message BatchOperateRdsResponse {
  bool success = 1;                // 是否操作成功
  string message = 2;              // 操作结果信息
  repeated string failed_ids = 3;   // 操作失败的实例ID列表
  map<string, string> results = 4;  // 详细操作结果
}

// RDS资源服务
service RdsService {
  // 获取未绑定的RDS列表
  rpc GetRdsUnbindList(GetRdsUnbindListRequest) returns (GetRdsUnbindListResponse);
  // 获取已绑定的RDS列表
  rpc GetRdsList(GetRdsListRequest) returns (GetRdsListResponse);
  // 绑定RDS到资源树节点
  rpc BindRds(BindRdsRequest) returns (BindRdsResponse);
  // 从资源树节点解绑RDS
  rpc UnBindRds(UnBindRdsRequest) returns (UnBindRdsResponse);
  // 批量操作RDS实例
  rpc BatchOperateRds(BatchOperateRdsRequest) returns (BatchOperateRdsResponse);
}
